Test busqueda inmuebles implementado